new files added

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ python-zadania-1.ipynb
 lecture_materials
 python-zadania-1-zosia.ipynb
 z-python-zadania-1.ipynb
+.vscode
+notatki.ipynb
+__pycache__
+requirements.in
